--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -17,10 +17,18 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+html, button, input, select, textarea { font-family: sans-serif; color: #222; }
+
+
+
+body {-webkit-font-smoothing: antialiased; font-family: "ff-din-web", sans-serif;}
+p {font-family:"garamond-premier-pro"; font-size:18px;}
+body {    
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow-x: hidden;
+    height: 100%;
 }
 * {
   font-family: 'Raleway', Calibri, Arial, sans-serif;
@@ -41,15 +49,15 @@ ul.nav.nav-pills {
 ul.nav.nav-pills li:hover {
   background-color: blue;
 }
-.nav>li>a:hover, .nav>li>a:focus {
+.nav>li>a:hover {
   text-decoration: none;
   background-color: #337ab7;
 }
-.nav>li>a:hover, .nav>li>a:focus {
+.nav>li>a:hover {
   text-decoration: none;
   background-color: #337ab7;
 }
-.nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
+.nav .open>a, .nav .open>a:hover {
   background-color: #337ab7;
 }
 ul.nav.nav-pills {
@@ -68,14 +76,9 @@ a:link {text-decoration: none; color:white;} //the original link with no underli
 a:visited {text-decoration: none;} //the visited link with no underline
 a:hover {text-decoration: none; font-weight: 800; } //mouseover link and an underline appears
 //changes the nav bars. Second one has to be there twice to work?.
-.nav>li>a:hover, .nav>li>a:focus {
-  text-decoration: none;
-  background-color: #337ab7;
-}
-.nav>li>a:hover, .nav>li>a:focus {
-  text-decoration: none;
-  background-color: #337ab7;
-}
+
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
   background-color: #337ab7;
 }
+
+a,a:visited{color:inherit;text-decoration:none;cursor:pointer;outline:none;-webkit-transition:color 0.2s ease-out;-moz-transition:color 0.2s ease-out;-ms-transition:color 0.2s ease-out;-o-transition:color 0.2s ease-out;transition:color 0.2s ease-out;}
