--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -193,3 +193,9 @@ a h1:hover {
 * {
   box-sizing: border-box;
 }
+body {    
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow-x: hidden;
+    height: 100%;
+}
